--- a/cleo-prototype/src/components/Root.css
+++ b/cleo-prototype/src/components/Root.css
@@ -70,11 +70,12 @@ img {
 .page_topbar-title {
   color: #171717;
   font-family: Inter;
-  font-size: 14px;
+  font-size: 13px;
   font-style: normal;
   font-weight: 600;
   line-height: 20px;
-  /* 142.857% */
+  display: flex;
+  align-items: center;
 }
 
 
