--- a/cleo-prototype/src/components/catalog/CatalogMain.css
+++ b/cleo-prototype/src/components/catalog/CatalogMain.css
@@ -1,8 +1,391 @@
+.catalog-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 46px 40px;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 30px;
+}
+
+.catalog-popular {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 21px;
+}
+
+.catalog-popular-box {
+    display: flex;
+    align-items: center;
+    gap: 25px;
+    align-self: stretch;
+}
+
+.catalog-title {
+    color: var(--black);
+    font-family: var(--inter);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 120% */
+}
+
+.catalog-popular-item {
+    display: flex;
+    padding: 7px 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 6px;
+    flex: 1 0 0;
+    align-self: stretch;
+    border-radius: 7px;
+    border: 1px solid #E2E8F0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.60) 100%), #FFF;
+    box-shadow: 0px 0px 0px 2px #F8FAFC inset, 0px 2px 4px -1px rgba(2, 6, 23, 0.05);
+}
+
+.catalog-popular-item-img {
+    width: 24px;
+    height: 24px;
+}
+
+.catalog-popular-item-title {
+    color: var(--grey);
+    text-align: center;
+    font-family: var(--inter);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 171.429% */
+}
+
+.catalog-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+
+
+
+/*====Switch====*/
+.catalog-switch {
+    position: relative;
+    display: inline-block;
+    width: 34px;
+    height: 20px;
+}
+
+.catalog-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.catalog-switch-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 20px;
+}
+
+.catalog-switch-slider:before {
+    position: absolute;
+    content: "";
+    height: 14px;
+    width: 14px;
+    left: 3px;
+    bottom: 3px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+.catalog-switch input:checked+.catalog-switch-slider {
+    background-color: var(--blue);
+}
+
+.catalog-switch input:checked+.catalog-switch-slider:before {
+    transform: translateX(14px);
+}
+
+.catalog-switch-slider {
+    border-radius: 20px;
+}
+
+.catalog-switch-slider:before {
+    border-radius: 50%;
+}
+
+
 .catalog-content-list {
     display: flex;
-align-items: flex-start;
-align-content: flex-start;
-gap: 16px;
-align-self: stretch;
-flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 16px;
+    align-self: stretch;
+    flex-wrap: wrap;
+}
+
+.catalog-content-box {
+    display: flex;
+    width: 1186px;
+    align-items: flex-start;
+    gap: 32px;
+}
+
+.catalog-content-filters {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    min-width: 200px;
+    max-width: 200px;
+}
+
+.catalog-content-filters-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+}
+
+.catalog-content-filters-top-title {
+    color: var(--black);
+    font-family: var(--inter);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 27px;
+    /* 150% */
+}
+
+.catalog-content-filters-top-button {
+    display: inline-flex;
+    padding: 4px 15px;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 7px;
+    border: 1px solid #E2E8F0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%), #FFF;
+    box-shadow: 0px 0px 0px 2px #F8FAFC inset, 0px 2px 4px -1px rgba(2, 6, 23, 0.05);
+    color: var(--black);
+    text-align: center;
+    font-family: var(--inter);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21px;
+    cursor: pointer;
+}
+
+.catalog-content-filters-numbers {
+    color: var(--grey);
+    font-family: var(--inter);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    /* 150% */
+}
+
+.catalog-content-filters-switch-box {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+
+.catalog-content-filters-switch-box-text {
+    color: var(--black);
+    font-family: var(--inter);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px;
+    /* 150% */
+}
+
+.catalog-content-filters-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1px;
+    align-self: stretch;
+}
+
+.catalog-content-filters-dropdown-box {
+    display: flex;
+    flex-direction: column;
+    padding: 13px 0px 12px 0px;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.catalog-content-filters-dropdown-label {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    cursor: pointer;
+}
+
+.catalog-content-filters-dropdown-label span {
+    font-size: 18px;
+    color: var(--black);
+}
+
+.catalog-content-filters-dropdown-title {
+    color: var(--black);
+    font-family: var(--inter);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22.4px;
+    /* 140% */
+}
+
+.catalog-content-filters-dropdown-content {
+    align-items: flex-start;
+    align-self: stretch;
+    background: #fff;
+    border-radius: 8px;
+    display: none;
+    flex-direction: column;
+}
+
+.catalog-content-filters-dropdown-item {
+    display: flex;
+    padding: 4px 0px 0px 0px;
+    align-items: center;
+    gap: 5px;
+    align-self: stretch;
+}
+
+.catalog-content-filters-dropdown-item input {
+    cursor: pointer;
+}
+
+.catalog-content-filters-dropdown-content-text {
+    color: var(--black);
+    font-family: var(--inter);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+}
+
+
+
+.catalog-tool-item {
+    border-radius: 5.6px;
+    border: 0.8px solid #E2E8F0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.00) 0%, rgba(255, 255, 255, 0.60) 100%), #FFF;
+    box-shadow: 0px 0px 0px 1.6px #F8FAFC inset, 0px 1.6px 3.2px -0.8px rgba(2, 6, 23, 0.05);
+    display: flex;
+    height: 28.8px;
+    padding: 2.4px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 4.8px;
+    cursor: pointer;
+    margin-top: 4px;
+}
+
+.catalog-tool-item.selected {
+    border: 1.5px solid var(--blue);
+}
+
+.filter-tool-logo {
+    width: 24px;
+    height: 24px;
+}
+
+.catalog-tool-name {
+    color: #212936;
+    text-align: center;
+    font-family: Inter;
+    font-size: 11.2px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16.8px;
+    /* 150% */
+}
+
+.catalog-filter-clear {
+    display: flex;
+    padding: 5px 15px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 7px;
+    border: 1px solid #E2E8F0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%), #FFF;
+    box-shadow: 0px 0px 0px 2px #F8FAFC inset, 0px 2px 4px -1px rgba(2, 6, 23, 0.05);
+    color: #212936;
+    text-align: center;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21px;
+    /* 150% */
+    width: 100%;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.material-symbols-outlined.open {
+    transform: rotate(180deg);
+}
+
+.catalog-content-main {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    flex: 1 0 0;
+}
+.catalog-content-main-filters-selected {
+    display: flex;
+    align-items: flex-start;
+    align-content: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    flex-wrap: wrap;
+}
+.catalog-content-main-filter-tag {
+    display: flex;
+    padding: 7px 10.6px;
+    align-items: center;
+    gap: 4px;
+    border-radius: 10px;
+border: 1px solid var(--blue, #0008CF);
+background: #F8FAFC;
+box-shadow: 0px 1px 2px 0px rgba(2, 6, 23, 0.05);
+color: var(--blue, #0008CF);
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 21px; /* 150% */
+
+}
+.catalog-content-main-remove-filter {
+    font-size: 16px;
+    cursor: pointer;
 }
