--- a/cleo-prototype/src/components/team/TeamMain.css
+++ b/cleo-prototype/src/components/team/TeamMain.css
@@ -1,23 +1,203 @@
 
-  
-  .team-table {
-    margin-top: 20px;
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  .team-table th, .team-table td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
-  }
-  
-  .team-table th {
-    background-color: #f4f4f4;
-  }
-  
-  .profile-pic {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-  }
+.team-page-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding: 25px 40px;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  width: 100%;
+}
+
+.team-page-wrapper-top {
+display: flex;
+flex-direction: row;
+align-items: flex-start;
+gap: 30px;
+}
+
+.team-page-wrapper-top-searchbox {
+  display: flex;
+  width: 229px;
+  height: 32px;
+  padding: 6px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  flex-shrink: 0;
+  border-radius: 10px;
+background: #FFF;
+box-shadow: 0px 0px 0px 1px #EAEAEA;
+}
+.team-page-wrapper-top-searchbox span {
+  font-size: 16px;
+  color: #A3A3A3;
+}
+.team-page-wrapper-top-input {
+border: none;
+width: 100%;
+height: 100%;
+
+}
+
+.team-page-wrapper-top-filter-box {
+  border-radius: 9px;
+  background: #FFF;
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.16), 0px 1px 2px 0px rgba(0, 0, 0, 0.10);
+}
+
+.team-page-wrapper-top-filter-box-content {
+  display: inline-flex;
+  padding: 6px 8px;
+  align-items: center;
+  gap: 4px;
+}
+.team-page-wrapper-top-filter-box-content span {
+  color: #737373;
+  font-size: 16px;
+}
+.team-page-wrapper-top-filter-box-text {
+  color: #737373;
+  text-align: center;
+  font-family: Inter;
+  font-size: 13.781px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 145.125% */
+}
+
+
+/*====Table====*/
+
+.team-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.team-header,
+.team-row {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  padding: 10px 0;
+  justify-content: space-between;
+}
+
+.team-header {
+  border-bottom: 1px solid #e0e0e0;
+
+}
+
+.team-cell {
+  text-align: left;
+}
+
+.team-checkbox-all,
+.team-checkbox {
+  text-align: left;
+  width: 5%;
+}
+
+.team-profile-pic {
+  width: 24px;
+  height: 24px;
+}
+
+.team-name {
+
+width: 25%;
+
+}
+.team-name-text {
+  color: #171717;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px; /* 142.857% */
+
+
+}
+
+.team-email {
+  color: #525252;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+width: 25%;
+
+}
+
+.team-last-login {
+  color: #525252;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+width: 25%;
+
+}
+
+.team-progress {
+  display: flex;
+  width: 64px;
+  flex-direction: column;
+  align-items: center;
+  width: 10%;
+
+}
+
+.team-progress-text {
+  color: #525252;
+  text-align: center;
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 200% */
+
+}
+
+.team-progress-bar {
+  width: 100%;
+  height: 8px;
+  border-radius: 5px;
+  background-color: #e0e0e0;
+}
+
+.team-progress-bar::-webkit-progress-bar {
+  background-color: #e0e0e0;
+  border-radius: 5px;
+}
+
+.team-progress-bar::-webkit-progress-value {
+  background-color: #4caf50;
+  border-radius: 5px;
+}
+
+.team-photo {
+  width: 5%;
+  color: #737373;
+font-family: Inter;
+font-size: 13.781px;
+font-style: normal;
+font-weight: 500;
+line-height: 20px; /* 145.125% */
+}
+
+.team-table-header-text {
+  color: #737373;
+font-family: Inter;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 20px; /* 142.857% */
+text-align: left;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
