--- a/cleo-prototype/src/components/catalog/CatalogMain.css
+++ b/cleo-prototype/src/components/catalog/CatalogMain.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    padding: 46px 40px;
+    padding: 46px 20px;
     justify-content: center;
     align-items: flex-start;
     gap: 30px;
@@ -68,6 +68,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
+    width: 100%;
 }
 
 
@@ -132,16 +133,16 @@
     display: flex;
     align-items: flex-start;
     align-content: flex-start;
-    gap: 16px;
+    gap: 10px;
     align-self: stretch;
     flex-wrap: wrap;
 }
 
 .catalog-content-box {
     display: flex;
-    width: 1186px;
     align-items: flex-start;
-    gap: 32px;
+    gap: 25px;
+    width: 100%;
 }
 
 .catalog-content-filters {
