Panels age cours + Quizz

--- a/cleo-prototype/src/components/Root.css
+++ b/cleo-prototype/src/components/Root.css
@@ -11,8 +11,10 @@
   --light-grey: #F2F2F2;
   --green: #22C55E;
   --green-10: rgba(34, 197, 94, 0.1);
+  --green-light: #E5FCED;
   --dark-green: #089370;
   --orange: #FDA817;
+  --orange-light: #FFF6E8;
   --red: #ED3B54;
   --red-10: rgba(237, 59, 84, 0.1);
 
