--- a/cleo-prototype/src/components/catalog/LessonPage.css
+++ b/cleo-prototype/src/components/catalog/LessonPage.css
@@ -54,18 +54,108 @@
 
 .lesson-content {
     line-height: 1.6;
+    width: 85%;
 }
 
+/* ====Recap Box==== */
+
 .lesson-content-recap-box {
-    width: 400px;
-    background-color: red;
-    height: 350px;
+    width: 300px;
+    border: 1px solid #e2e8f0;
+    border-radius: 10px;
+    padding: 20px;
     position: sticky;
     top: 100px;
     margin-top: 25px;
+    font-family: var(--inter);
 }
 
+.recap-title {
+    color: #212936;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    /* 140% */
+}
 
+.recap-divider {
+    border: none;
+    height: 1px;
+    background-color: #E2E8F0;
+    margin: 15px 0;
+}
+
+.recap-lessons-title {
+    color: #212936;
+    font-family: Inter;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22.4px;
+    /* 140% */
+}
+
+.recap-lessons-list {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    gap: 5px;
+    flex-direction: column;
+    padding-top: 5px;
+}
+
+.recap-lesson-item {
+    color: #334155;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px;
+    /* 150% */
+    padding: 8px 6px;
+    border-radius: 10px;
+}
+
+.recap-lesson-item:hover {
+    background-color: #F1F5F9;
+}
+
+.recap-lesson-item.active {
+    background-color: #F1F5F9;
+
+}
+
+.recap-lesson-item a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Progress Bar */
+.recap-progress-title {
+    font-size: 16px;
+    font-weight: 600;
+    color: #1e293b;
+    margin-top: 20px;
+    margin-bottom: 8px;
+  }
+  
+  .recap-progress-bar {
+    width: 100%;
+    height: 8px;
+    background: #e2e8f0;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .recap-progress-bar-fill {
+    height: 100%;
+    background: #4f46e5; /* Bleu progressif */
+    border-radius: 10px;
+    transition: width 0.5s ease-in-out;
+  }
 
 
 
@@ -145,13 +235,15 @@
     margin-left: auto;
     margin-right: auto;
 }
+
 /*====type: "subtitle"====*/
 .lesson-subtitle {
     color: var(--black);
-font-family: var(--inter);
-font-size: 32px;
-font-style: normal;
-font-weight: 600;
-line-height: 38.4px; /* 120% */
+    font-family: var(--inter);
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 38.4px;
+    /* 120% */
     padding-top: 35px;
-  }
+}
