--- a/cleo-prototype/src/components/team/TeamMember.css
+++ b/cleo-prototype/src/components/team/TeamMember.css
@@ -47,17 +47,20 @@
   width: 100%;
   border-bottom: 1px solid #F0F0F0;
 }
+
 .profile-tab {
   border-bottom: 2px solid #171717;
   width: fit-content;
 }
+
 .profile-tab-name {
   color: #171717;
   font-family: Inter;
   font-size: 14px;
   font-style: normal;
   font-weight: 500;
-  line-height: 20px; /* 142.857% */
+  line-height: 20px;
+  /* 142.857% */
 }
 
 
@@ -73,40 +76,66 @@
 .team-courses-row {
   display: flex;
   align-items: center;
-  padding: 10px 0;
-  border-bottom: 1px solid #e0e0e0;
+  padding: 10px 15px;
 }
 
 .team-courses-header {
-  background-color: #f5f5f5;
-  font-weight: bold;
+  border-bottom: 1px solid #F0F0F0;
+  background: #FFF;
 }
 
 .team-course-cell {
-  flex: 1;
-  padding: 0 15px;
   text-align: left;
+  color: #737373;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  /* 142.857% */
+}
+
+.team-course-cell span {
+  color: #525252;
+  font-family: Inter;
+  font-size: 13.891px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  /* 143.982% */
 }
 
 .team-course-name {
-  flex: 2;
+  width: 45%;
 }
 
 .team-course-role {
-  flex: 1;
+  width: 15%;
 }
 
 .team-course-tool {
-  flex: 0.5;
+  width: 15%;
   text-align: center;
 }
 
 .team-course-status {
-  flex: 1;
+  width: 15%;
+  display: flex;
+  align-items: center;
 }
 
 .team-course-date {
-  flex: 1;
+  width: 10%;
+}
+
+.team-course-date span {
+  color: #A3A3A3;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  /* 142.857% */
 }
 
 .tool-icon {
@@ -119,4 +148,50 @@
   text-align: center;
   padding: 20px;
   color: #888;
+}
+
+
+
+/* Ajout du point de statut à gauche du texte */
+.team-course-status-dot {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  border-radius: 50%;
+  margin-right: 8px;
+}
+
+.team-course-status-done .team-course-status-dot {
+  background-color: var(--green);
+  /* Vert */
+  border: 4px solid var(--green-light);
+}
+
+.team-course-status-inprogress .team-course-status-dot {
+  background-color: var(--orange);
+  /* Orange */
+  border: 4px solid var(--orange-light);
+
+}
+
+.team-course-status-notstarted .team-course-status-dot {
+  background-color: var(--grey);
+  /* Gris */
+  border: 4px solid var(--light-grey);
+
+}
+
+.team-course-status-done span {
+  color: var(--green);
+  /* Vert */
+}
+
+.team-course-status-inprogress span {
+  color: var(--orange);
+  /* Orange */
+}
+
+.team-course-status-notstarted span {
+  color: var(--grey);
+  /* Gris */
 }
