--- a/cleo-prototype/src/components/catalog/CourseCard.css
+++ b/cleo-prototype/src/components/catalog/CourseCard.css
@@ -10,7 +10,7 @@
     font-family: var(--inter);
     display: flex;
     flex-direction: column;
-    height: 100%;
+    align-self: stretch;
     justify-content: space-between;
     width: 32%;
 }
