--- a/cleo-prototype/src/components/catalog/LessonPage.css
+++ b/cleo-prototype/src/components/catalog/LessonPage.css
@@ -210,6 +210,7 @@
     width: 100%;
     max-width: 800px;
     border-radius: 10px;
+    margin-top: 25px;
 }
 
 /*====type: "link"====*/
@@ -246,4 +247,37 @@
     line-height: 38.4px;
     /* 120% */
     padding-top: 35px;
+}
+
+.lesson-content-bottom {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 40px;
+}
+
+.lesson-next-btn, .lesson-complete-btn {
+    display: flex;
+    padding: 5px 29px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+border: 1px solid #E2E8F0;
+background: linear-gradient(180deg, rgba(255, 255, 255, 0.20) 0%, rgba(255, 255, 255, 0.00) 100%), #FFF;
+box-shadow: 0px 0px 0px 2px #F8FAFC inset, 0px 2px 4px -1px rgba(2, 6, 23, 0.05);
+color: #212936;
+text-align: center;
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 500;
+line-height: 27px; /* 150% */
+gap: 5px;
+}
+
+.lesson-next-btn:hover, .lesson-complete-btn:hover {
+    background-color: var(--dark-blue);
+}
+
+.lesson-next-btn span, .lesson-complete-btn span {
+    font-size: 20px;
 }
